[package]
name = "encrusted"
description = "A CLI tool for applying colour managing colour themes across tools & applications."
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE.md"

[badge]
experimental = { status = "WIP"}

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hex_color = { version = "3.0.0" }
